[package]
name = "desaturate-macros"
version = "0.0.0"
edition = "2021"
description = "Procedural macros for the desaturate crate."
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["experimental"]

# Placeholder for now
include = ["Cargo.toml", "src/lib.rs"]

[lib]
proc-macro = true

[features]
generate-async = []
generate-blocking = []
debug = ["syn/extra-traits"]

[dependencies]
proc-macro2 = "1.0.78"
syn = { version = "2.0.49", features = ["parsing", "proc-macro", "derive", "full", "visit", "visit-mut"] }
quote = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
