[package]
name = "desaturate-macros"
version = "0.0.2"
edition = "2021"
description = "Procedural macros for the desaturate crate."
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["experimental"]

[lib]
proc-macro = true

[features]
generate-async = []
generate-blocking = []

[dependencies]
proc-macro2 = "1.0.78"
syn = { version = "2.0.49", features = ["parsing", "proc-macro", "derive", "full", "visit", "visit-mut"] }
quote = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
