[package]
name = "desaturate-macros"
version = "0.0.2"
edition = "2021"
description = "Procedural macros for the desaturate crate."
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["experimental"]

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "doc"]

[lib]
proc-macro = true

[features]
default = ["dont-directly-import-this-crate"]
generate-async = []
generate-blocking = []
dont-directly-import-this-crate = []

[dependencies]
proc-macro2 = "1.0.78"
syn = { version = "2.0.49", features = ["parsing", "proc-macro", "derive", "full", "visit", "visit-mut"] }
quote = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
