[package]
name = "desaturate"
version = "0.0.1"
edition = "2021"
categories = ["asynchronous", "no-std::no-alloc", "rust-patterns"]
keywords = ["experimental"]
description = "This package aims to makes it easier to maintain a single code base for both regular and async functions."
license.workspace = true
authors.workspace = true
repository.workspace = true

[[example]]
name = "simple"
required-features = ["generate-async", "generate-blocking", "macros", "std"]

[features]
default = ["macros", "generate-async", "std"]
macros = ["dep:desaturate-macros"]
generate-async = ["desaturate-macros?/generate-async"]
generate-blocking = ["desaturate-macros?/generate-blocking"]
std = []

[dependencies]
desaturate-macros = { version = "0.0.1", path = "../desaturate-macros", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"
