[package]
name = "desaturate"
version = "0.0.3"
edition = "2021"
categories = ["asynchronous", "no-std::no-alloc", "rust-patterns"]
keywords = ["experimental"]
description = "This package aims to makes it easier to maintain a single code base for both regular and async functions."
license.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "simple"
required-features = ["async", "blocking", "macros", "std"]

[features]
default = ["macros", "async", "std"]
macros = ["dep:desaturate-macros"]
async = ["desaturate-macros?/generate-async"]
blocking = ["desaturate-macros?/generate-blocking"]
generate-async = ["async"]
generate-blocking = ["blocking"]
std = []

[dependencies]
desaturate-macros = { version = "0.0.2", path = "../desaturate-macros", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"
